// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RowLabel /> renders RowLabel 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="text text--dark text--primary jbDszw gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="text text--dark text--primary jbDszw gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="text text--dark text--primary jbDszw gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`accent\` 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary cNgRZC gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary cNgRZC gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary cNgRZC gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`alert\` 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="badge dZsiHe"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="badge dZsiHe"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="badge dZsiHe"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`caution\` 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="badge klwdBr"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="badge klwdBr"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="badge klwdBr"
        color="#c69a22"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`neutral\` 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="badge hAGtRl"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="badge hAGtRl"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="badge hAGtRl"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`positive\` 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary laxRsg gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary laxRsg gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary laxRsg gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders opened RowLabel 1`] = `
<div
  className="glzhqJ"
>
  <div
    className="htpsXd"
  >
    <div
      className="row__label row__label--mobile ckHYku"
      data-index={0}
    >
      <div
        className="text text--dark text--primary jbDszw gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--hidden bOCGex"
      data-index={0}
    >
      <div
        className="text text--dark text--primary jbDszw gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--active bOCGex"
      data-index={0}
    >
      <div
        className="text text--dark text--primary jbDszw gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;
